--- a/src/app/components/trust-pilot/trust-pilot.component.html
+++ b/src/app/components/trust-pilot/trust-pilot.component.html
@@ -17,6 +17,6 @@
         </div>
      
         </div>
-        <a class="fbd9x84" rel="noopener" target="_blank" href="https://www.trustpilot.com/review/remitly.com"></a>
+        <a class="fbd9x84" rel="noopener" target="_blank" href=""></a>
       </div>
     
